Use ObjectFactory (#904)